[tool.poetry]
name = "evenless_api"
version = "0.1.0"
description = "The backend api for the evenless mail reader"
authors = ["Philipp Hack <philipp.hack@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
notmuch = "^0.29.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pyproject-flake8 = "^0.0.1-alpha.5"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-sugar = "^0.9.5"
pytest-cov = "^3.0.0"
uvicorn = "^0.18.3"
pre-commit = "^2.20.0"
requests = "^2.28.1"
vulture = "^2.5"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = 'black'
src_paths = ["evenless_api", "tests"]
line_length = 88
include_trailing_comma = true
balanced_wrapping = true
force_single_line = false
multi_line_output = 3
lines_between_types = 1

[tool.flake8]
count = "false"
extend-exclude = 'docs'
extend-ignore = "E203,S101,SIM106"
max-line-length = 88
show-source = "false"
statistics = "false"
inline-quotes = '"'
accept-encodings = 'utf-8'

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
addopts = "-rfEX -p pytester --strict-markers --maxfail=2 --cov=evenless_api --import-mode=importlib"
python_files = ["test_*.py"]
xfail_strict = true
